添加日志记录  在同级目录下

--- a/src/main/resources/template/requestMetaInfoDetail.vm
+++ b/src/main/resources/template/requestMetaInfoDetail.vm
@@ -16,7 +16,7 @@
            <li class="list-group-item">
                <div class="form-group">
                    <label for="inputfile">地址:</label>
-                   <input type="text" name="url" value="$!requestInfo.url">
+                   <input type="text" name="url" disabled ="disabled" value="$!requestInfo.url">
                </div>
            </li>
            <li class="list-group-item">
