--- a/src/main/resources/template/requestMetaInfoList.vm
+++ b/src/main/resources/template/requestMetaInfoList.vm
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/static/js/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/list.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap.css"></link>
@@ -43,7 +43,7 @@
                            </div>
                            <div class="form-group">
                                <label for="inputfile">请求内容预处理脚本:</label>
-                               <textarea cols="50" rows="10" name="preRequestScript" ></textarea>
+                               <textarea cols="50" rows="10" name="preRequestScript"></textarea>
                            </div>
                            <div class="form-group">
                                <label for="inputfile">响应内容格式:</label>
