完善用户自定义url请求处理

--- a/src/main/resources/template/requestMetaInfoList.vm
+++ b/src/main/resources/template/requestMetaInfoList.vm
@@ -72,7 +72,7 @@
            </div><!-- /.modal -->
        </div>
        #foreach( $requestInfo in $requestMetaInfos)
-           <li class="list-group-item"><a href="$requestInfo.id"> $requestInfo.url</a></li>
+           <li class="list-group-item"><a href="/admin/requestmeta/$requestInfo.id"> $requestInfo.url</a></li>
        #end
    </ul>
 </body>
