--- a/src/main/resources/template/requestMetaInfoDetail.vm
+++ b/src/main/resources/template/requestMetaInfoDetail.vm
@@ -1,10 +1,14 @@
 <html>
 
 <head>
-    <script src="/static/js/jquery.js"></script>
+#*    <script src="/static/js/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css"></link>*#
+    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
+
     <script src="/static/js/detailInfo.js"></script>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css"></link>
     <meta charset="UTF-8"/>
 </head>
 <body>
@@ -16,7 +20,7 @@
            <li class="list-group-item">
                <div class="form-group">
                    <label for="inputfile">地址:</label>
-                   <input type="text" name="url" readonly="readonly" value="$!requestInfo.url">
+                   <input type="text" name="url" readonly="readonly" value="$!requestInfo.url" style="width: 500px;">
                </div>
            </li>
            <li class="list-group-item">
