--- a/src/main/resources/template/requestMetaInfoList.vm
+++ b/src/main/resources/template/requestMetaInfoList.vm
@@ -1,10 +1,17 @@
 <html>
 
 <head>
+#*
     <script src="/static/js/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/list.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap.css"></link>
+*#
+
+
+    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
+    <script src="/static/js/list.js"></script>
     <meta charset="UTF-8"/>
 </head>
 <body>
@@ -22,7 +29,7 @@
                    <div class="modal-body">
                            <div class="form-group">
                                <label for="inputfile">地址:</label>
-                               <input type="text" name="url" >
+                               <input type="text" name="url"  style="width: 500px;">
                            </div>
                            <div class="form-group">
                                <label for="inputfile">请求方式:</label>
